[package]
name = "breeze"
version = "0.1.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.10"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
label-logger = "0.2.0"
lalrpop-util = {version = "0.19.10", features = ["lexer"]}
lazy_static = "1.4.0"
regex = "1"
serde = {version="1.0.193", features = ["derive"]}
serde_json = "1.0.108"
subprocess = "0.2.9"

[build]
rustflags = ["-C", "prefer-dynamic", "-C", "rpath"]

[lib]
crate-type = ["dylib", "rlib"]
